fix(docgen): spacing

--- a/src/elements/content-sidebar/DocGenSidebar/DocGenSidebar.scss
+++ b/src/elements/content-sidebar/DocGenSidebar/DocGenSidebar.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables';
 
 .docgen-sidebar {
-    padding: 20px 24px 0 24px;
+    padding: 0 24px 0 24px;
 }
 
 .center {
